feat: included field to trace if notification is visualized
